# boilerplate-saas-django-vuejs-new

./: .dockerignore  .env.development.template  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.debug.yml  docker-compose.development.yml  docker-compose.production.yml  vetur.config.js  workspace.code-workspace
backend/: .dockerignore  .env.development.template  .gitignore  0001_initial.py  Dockerfile.development  Dockerfile.production  debugger.py  entrypoint.production.sh  entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.development.txt  requirements.txt
backend/saasboilerplate/: asgi.py  production.py  settings.py  urls.py  wsgi.py
backend/usermanagement/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  views.py
backend/usermanagement/migrations/: 0001_initial.py  0002_auto_20220227_1921.py  0002_organisation.py  0002_user_referrer.py  0003_auto_20210719_2207.py  0003_auto_20220306_2046.py  0003_user_profile_picture.py  0004_auto_20210723_1800.py  0004_auto_20220206_1312.py  0005_auto_20210723_1840.py  0005_auto_20220206_1313.py  0006_auto_20210724_1355.py  0007_auto_20210724_1444.py  0008_subscriptionplan.py  0009_auto_20210728_0638.py  0010_alter_subscriptionplan_features.py  0011_subscriptionplan_buttontext.py  0012_auto_20210909_2136.py  0013_rename_subscription_workspace_subscriptionplan.py  0014_workspace_state.py  0015_user_termsandconditionsaccepted.py  0016_rename_termsandconditionsaccepted_user_terms_and_conditions_accepted.py  0017_user_profile_picture.py  0018_user_is_setup.py  0019_rename_is_setup_user_initial_setup_done.py  0020_auto_20220203_1836.py
backend/usermanagement/templates/usermanagement/: user_reset_password_body.html  user_reset_password_body.txt  user_reset_password_subject.txt
frontend/: .env.development  .env.production  .eslintrc.js  .stylelintrc  Dockerfile.development  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  i18n.js  main.js  subscriptions.js
frontend/src/api/: axiosConfig.js  subscriptions.js  user.js  utils.js
frontend/src/components/: LocaleSwitch.vue  NavigationMain.vue  PageNotFound.vue
frontend/src/components/Header/: Header.vue  HeaderBar.vue  HeaderNavigation.vue  HeaderUserContextMenu.vue
frontend/src/components/Login/: LoginCard.vue  LoginForm.vue  RegisterForm.vue  ResetPasswordForm.vue
frontend/src/components/Onboarding/: PaymentInformationForm.vue  PlanSelection.vue
frontend/src/localization/: de.json  en.json  fr.json  index.js  supported-locales.js
frontend/src/router/: authenticationGuard.js  index.js
frontend/src/store/: index.js
frontend/src/styles/: global.scss  variables.scss
frontend/src/views/: Dashboard.vue  DashboardView.vue  Home.vue  HomeView.vue  Login.vue  Register.vue  SettingsView.vue  SetupView.vue
nginx/: Dockerfile.development  Dockerfile.production  nginx.conf
(+18 files in other folders)
